testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments14_ES6(alwaysstrict=false).errors.txt
error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
emitArrowFunctionWhenUsingArguments14_ES6.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5108: Option 'alwaysStrict=false' has been removed. Please remove it from your configuration.
==== emitArrowFunctionWhenUsingArguments14_ES6.ts (1 errors) ====
    function f() {
        if (Math.random()) {
            let arguments = 100;
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
            return () => arguments;
        }
    }